Fixes: #723 - Fixes small design issues (#726)
minor change

remove horizontal scroll

did changes to styles

avoid the little jump

remove extra length

--- a/src/components/StaticAppBar/StaticAppBar.css
+++ b/src/components/StaticAppBar/StaticAppBar.css
@@ -33,6 +33,9 @@
     .topAppBar button{
         display: block  !important;
     }
+    .top-menu{
+        display: none;
+    }
     .conversation__description .description__heading {
         margin-top: 0;
         max-width: 100%;
